# SPINEL

./: PO.py  SPINEL.py  cubic_input_au_ambient_t=3_chi=0.csv  cubic_input_au_ambient_t=3_chi=90.csv  hexagonal_input_hcpFe_ambinet_t=0_chi=0.csv  pyproject.toml  requirements.txt  tetragonalA_input_sn_ambient_t=0_chi=0.csv
.devcontainer/: devcontainer.json
example_files/: cubic_input_au_ambient_t=3_chi=0.csv  cubic_input_au_ambient_t=3_chi=90.csv  hexagonal_input_hcpFe_ambient_t=0_chi=0.csv  tetragonalA_input_sn_ambient_t=0_chi=0.csv
